# workspace-token-service

./: .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  NOTICE  Pipfile  README.md  build_openapi.py  dockerrun.bash  pyproject.toml  requirements.txt  run.py  run_tests.bash  setup.py  thog_config.json  thog_secret_requirements.txt  truffles.json  wsgi.py
.github/: labeler.yml
.github/workflows/: ci.yaml  image_build_push.yaml  integration_tests.yaml  test.yaml  wool.yml
deployment/nginx/: nginx.conf  uwsgi.conf
deployment/uwsgi/: uwsgi.ini  wsgi.py
docs/img/: quickstart_helm.md
gen3meta/: app.py  auth.py  tokens.py
gen3meta/blueprints/: oauth2.py
gen3meta/resources/: oauth2.py
migrations/: env.py
migrations/versions/: 27833deaf81f_add_idp.py  3417aec47fe2_encrypt_refresh_tokens.py  a38a346e6ded_create_refresh_token_table.py
openapi/: README.md  app_info.py  swagger.yaml
tests/: aggregate_test.py  app_test.py  ci_commands_script.sh  ci_setup.sh  conftest.py  postgres_creds.json  system_test.py  test_settings.json
wts/: api.py  app.py  auth.py  errors.py  models.py  tokens.py  utils.py
wts/admin_endpoints/: __init__.py
wts/auth/: __init__.py
wts/auth_plugins/: __init__.py  base.py  k8s.py
wts/blueprints/: aggregate.py  external_oidc.py  oauth2.py  tokens.py
wts/resources/: oauth2.py
wts/some_endpoints/: __init__.py
