[tool.poetry]
name = "wts"
version = "0.4.3"
description = "Workspace Token Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.4.1"
Authlib = "^0.14.3"
authutils = "^5.0.5"
cdiserrors = "^1.0.0"
cdislogging = "^1.0.0"
cryptography = ">=41.0.3"
Flask = {version = "^2.1.3", extras = ["async"]}
Flask-SQLAlchemy = "^2.3.0"
gunicorn = ">=21.2.0"
httpx = "^0.23.0"
kubernetes = "^11.0.0"
psycopg2-binary = "^2.7.0"
python-jose = "^3.0.0"
pyyaml = "^5.3.1"
sqlalchemy = "<2.0.0"

[tool.poetry.dev-dependencies]
codacy-coverage = "^1.3.11"
mock = "^4.0.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-flask = "^1.2.0"
respx = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
