[tool.poetry]
name = "wts"
version = "0.4.3"
description = "Workspace Token Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.4.1"
authutils = "^6.0.0"
cdiserrors = "^1.0.0"
cdislogging = "^1.0.0"
cryptography = ">=42.0.0"
Flask = {version = "^2.2.5", extras = ["async"]}
Flask-SQLAlchemy = "^2.3.0"
SQLAlchemy = "1.4"
httpx = "^0.23.0"
kubernetes = "^11.0.0"
psycopg2 = "^2.7.0"
python-jose = "^3.0.0"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
codacy-coverage = "^1.3.11"
mock = "^4.0.3"
pytest = "^8.2.0"
pytest-cov = "^3.0.0"
pytest-flask = "^1.2.0"
respx = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
